# pvc-powerchair

./: .gitignore  00_git_push  CHANGELOG.md  Dockerfile  HARDWARE_LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh
archive/: README.md
archive/v1/: README.md
archive/v2/: README.md
archive/v2/docs/: requirements.doc
archive/v2/software/: Gemfile  README.md  requirements.txt
archive/v3/report/: version3arduinopins.xlsx
archive/v4/: BOM-20181206_002.xls  BOM.md
docs/: PVC Parts List-V2.csv  PVC Parts List-V2.ods  PVC Parts List-V2.xls  README.md  electronics_diagram.odg  fritzing_diagram.fzz  index.md  pvc-chair-component-diagram.xml
docs/meeting_notes/: 20180206-planning-meeting.md
docs/meeting_notes/20170330-build-meeting/: README.md
docs/meeting_notes/20170427-build-meeting/: README.md
docs/meeting_notes/20170727-build-meeting/: README.md
docs/v1/: README.md
docs/v2/: README.md  pvc-chair-component-diagram.xml
docs/v2/docs/: PVC-Parts-List-V2.xls  electronics_diagram.odg
docs/v2/software/: Dockerfile
docs/v2/software/ros/src/pvcchair_behavior/: CMakeLists.txt  package.xml
docs/v2/software/ros/src/pvcchair_behavior/src/: talker.py
docs/v2/software/ros/src/pvcchair_description/: CMakeLists.txt
docs/v2/software/ros/src/pvcchair_description/meshes/connectors/: cc_3_way_y_connect.dae
docs/v2/software/ros/src/pvcchair_description/meshes/piping/: p1_left_n_right_base.dae  p3_left_n_right_back_upright.dae
docs/v2/software/ros/src/pvcchair_description/urdf/: back.urdf.xacro  pvcchair.urdf
docs/v2/software/ros/src/pvcchair_description/urdf/piping/: p4.urdf.xacro  p6.urdf.xacro
docs/v3/: README.md  notes.md
docs/v4/: notes.md
docs/v5/: README.md  notes.md
hardware/cad/: README.md  pvc-chair.FCStd
hardware/electronics/: README.md
meeting_notes/20170330-build-meeting/: README.md
simulation/: 01_cp_models  CMakeLists.txt  package.xml
simulation/launch/: pvc_powerchair.launch
simulation/models/pvc_powerchair/: model.config  model.sdf
simulation/src/: test.py
simulation/worlds/: pvc_powerchair.world
software/: Dockerfile  Gemfile  Guardfile  README.md  pavement.py  run-ros.sh
software/Arduino/PvcChair/: .gitignore  Makefile  MotorControl.cpp  MotorControl.h  PvcChair.ino
software/features/: topic.feature
software/ros/: .gitignore  README.md
software/ros/pvcchair_bringup/: CMakeLists.txt  README.md
software/ros/pvcchair_bringup_sim/: README.md  package.xml
software/ros/pvcchair_description/: CHANGELOG.rst  CMakeLists.txt
software/ros/src/pvcchair_control/: CMakeLists.txt  package.xml
software/ros/src/pvcchair_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
software/ros/src/pvcchair_description/launch/: pvcchair_rviz.launch  visualize_urdf.launch
software/ros/src/pvcchair_description/meshes/: gearbox_plate.dae
software/ros/src/pvcchair_description/meshes/connectors/: ca_4_way_t_connect.dae  cb_5_way_t_connect.dae  cc_3_way_y_connect.dae  cd_2_way_elbow.dae  ce_3_way_t_connect.dae  cf_3_way_slip.dae
software/ros/src/pvcchair_description/meshes/piping/: p4_footrest_base.dae  p9_connects_all.dae
software/ros/src/pvcchair_description/rviz/: pvcchair.rviz  visualize_urdf.rviz
software/ros/src/pvcchair_description/urdf/: arms.urdf.xacro  back.urdf.xacro  base.urdf.xacro  parameters.urdf.xacro  parts.urdf.xacro  pvcchair.urdf.xacro  pvcchair.xacro  seat.urdf.xacro
software/ros/src/pvcchair_description/urdf/connectors/: ca.urdf.xacro  cb.urdf.xacro  cc.urdf.xacro  cd.urdf.xacro  ce.urdf.xacro  cf.urdf.xacro  connectors.urdf.xacro
software/ros/src/pvcchair_description/urdf/misc/: parameters.urdf.xacro
software/ros/src/pvcchair_description/urdf/motion/: caster.urdf.xacro  motion_parts.urdf.xacro
software/ros/src/pvcchair_description/urdf/old/: pvcchair.gazebo
software/ros/src/pvcchair_description/urdf/piping/: p1.urdf.xacro  p2.urdf.xacro  p3.urdf.xacro  p4.urdf.xacro  p5.urdf.xacro  p6.urdf.xacro  p7.urdf.xacro  p8.urdf.xacro  p9.urdf.xacro
software/ros/src/pvcchair_description/urdf/wheels/: caster.urdf.xacro  parts.urdf.xacro  wheel.urdf.xacro
software/simulation/worlds/: pvc_powerchair.world
software/src/: .rosinstall
software/src/pvcchair_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
software/src/pvcchair_bringup/config/cob_undercarriage_ctrl/: MotionCtrl.ini  Platform.ini  cob_undercarriage_ctrl.yaml
software/src/pvcchair_bringup/launch/includes/: control.launch  spawn_robot.xml
software/src/pvcchair_bringup_sim/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
software/src/pvcchair_bringup_sim/launch/: robot.launch  teleop.launch
software/src/pvcchair_bringup_sim/rviz/: robot.rviz
software/src/pvcchair_description/: CHANGELOG.rst  README.md  package.xml
software/src/pvcchair_description/launch/: visualize_urdf.launch
software/src/pvcchair_description/meshes/connectors/: ca_4_way_t_connect.dae
software/src/pvcchair_description/rviz/: visualize_urdf.rviz
software/src/pvcchair_description/urdf/: motion.urdf.xacro  pvcchair.gazebo  pvcchair.urdf.xacro  pvcchair.xacro
software/src/pvcchair_description/urdf/includes/: controls.gazebo  parameters.xacro  properties.gazebo
software/src/pvcchair_description/urdf/includes/components/: arms.xacro  base.xacro  drive.xacro  seat.xacro
software/src/pvcchair_description/urdf/includes/parts/: gearbox_plate.xacro  pipes.xacro  swerve_wheel.xacro
software/src/pvcchair_description/urdf/motion/: wheel.urdf.xacro
software/src/pvcchair_description/urdf/piping/: piping.urdf.xacro
software/src/pvcchair_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
software/src/pvcchair_gazebo/include/pvcchair_gazebo/: cob_base_drive_chain.h
software/src/pvcchair_gazebo/src/: cob_base_drive_chain.cpp
v3/: BOM.md  README.md
v3/Code/: Joystick_Motor_Controlv14.ino
v3/Code/Motor_Control/: Motor_Control.ino
v3/Report/: version3arduinopins.xlsx
v3/code/PvcChair/: Makefile  PvcChair.ino  (+1 more)
v4/: BOM.md  README.md  notes.md
v4/design/: PVC_CHAIR_V4_BOM_20181205_005.xls
v5/: README.md
(+49 files in other folders)
