<?xml version="1.0"?>
<package>
  <name>pvc_powerchair</name>
  <version>0.0.1</version>
  <description>pvc-powerchair simulation package</description>

  <maintainer email="bus710@gmail.com">bus710</maintainer>

  <license>GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
