<?xml version="1.0"?>
<package format="2">
  <name>pvcchair_bringup_sim</name>
  <version>0.0.0</version>
  <description>Launch files for the PVC Pediatric Powerchair</description>

  <author email="nlamprian@gmail.com">Nick Lamprianidis</author>
  <maintainer email="dylan@robomakery.com">Dylan Vaughn</maintainer>

  <license>GPLv3</license>
  <url type="website">https://github.com/robomakery/pvc-powerchair</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>key_teleop</exec_depend>
  <exec_depend>pvcchair_bringup</exec_depend>
  <exec_depend>pvcchair_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
