<?xml version="1.0"?>
<package format="2">
  <name>pvcchair_description</name>
  <version>0.0.0</version>
  <description>URDF model of the PVC Pediatric Powerchair</description>

  <author email="dylan@robomakery.com">Dylan Vaughn</author>
  <maintainer email="dylan@robomakery.com">Dylan Vaughn</maintainer>

  <license>GPLv3</license>
  <url type="website">https://github.com/robomakery/pvc-powerchair</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
