<?xml version="1.0"?>
<package format="2">
  <name>pvcchair_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo resources for the PVC Pediatric Powerchair</description>

  <author email="nlamprian@gmail.com">Nick Lamprianidis</author>
  <maintainer email="dylan@robomakery.com">Dylan Vaughn</maintainer>

  <license>GPLv3</license>
  <url type="website">https://github.com/robomakery/pvc-powerchair</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
  </export>
</package>
