<?xml version="1.0"?>
<package>
  <name>pvcchair_description</name>
  <version>0.4.0</version>
  <description>pvcchair_description - the software for the PVC Pediatric Powerchair.</description>

  <maintainer email="dylan@robomakery.com">Dylan Vaughn</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/robomakery/pvc-powerchair</url>
  <author email="dylan@robomakery.com">Dylan Vaughn</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <test_depend>rviz</test_depend>
</package>
